Fix width of footer to prevent horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -156,6 +156,10 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
+  @media (max-width: 480px) {
+    display: block;
+  }
 }
 footer h3 {
   margin: 0;
@@ -163,6 +167,10 @@ footer h3 {
 }
 footer > div {
   width: 50%;
+
+  @media (max-width: 480px) {
+    margin: 0 auto;
+  }
 }
 footer .contact {
   padding-top: 5vh;
@@ -171,11 +179,20 @@ footer .contact {
   justify-content: center;
   margin-top: 5vh;
   width: 100%;
+
+  @media (max-width: 480px) {
+    display: block;
+    margin-top: 1em;
+    padding-top: 1em;
+  }
 }
 footer .contact h3 {
   border-right: 1px solid white;
   padding: 0 5vw;
   font-size: 1em;
+  @media (max-width: 480px) {
+    border: none;
+  }
 }
 footer .contact h3:last-child {
   border: none;
